--- a/extension/package.json
+++ b/extension/package.json
@@ -2,7 +2,7 @@
     "name": "nab-al-tools",
     "displayName": "NAB AL Tools",
     "description": "Development and translation management tool for AL language and Microsoft Dynamics 365 Business Central extensions.",
-    "version": "1.1.0",
+    "version": "1.1.1-preview.1",
     "publisher": "nabsolutions",
     "repository": {
         "type": "git",
