--- a/extension/package.json
+++ b/extension/package.json
@@ -369,6 +369,12 @@
                     "description": "When creating external documentation, this setting specifies if TOC (table of contents) files should be created.",
                     "scope": "resource"
                 },
+                "NAB.IncludeTablesAndFieldsInDocs": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "When creating external documentation, this setting specifies if all tables and fields should be included. If not enabled, only tables with public procedures will be included.",
+                    "scope": "resource"
+                },
                 "NAB.CreateYamlHeaderForDocs": {
                     "type": "boolean",
                     "default": false,
