--- a/extension/package.json
+++ b/extension/package.json
@@ -483,12 +483,14 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "dependencies": {
+        "adm-zip": "^0.5.5",
         "axios": "^0.21.1",
         "capitalize": "^2.0.3",
         "compare-versions": "^3.6.0",
         "escape-string-regexp": "^1.0.5",
         "format-duration": "^1.3.1",
         "javascript": "^1.0.0",
+        "jdataview": "^2.5.0",
         "lodash": "^4.17.21",
         "minimatch": "^3.0.4",
         "node-powershell": "^3.3.1",
@@ -496,6 +498,8 @@
         "xmldom": "^0.5.0"
     },
     "devDependencies": {
+        "@types/jdataview": "0.0.31",
+        "@types/adm-zip": "^0.4.34",
         "@types/capitalize": "^1.0.2",
         "@types/escape-string-regexp": "^1.0.0",
         "@types/format-duration": "^1.0.1",
