--- a/extension/package.json
+++ b/extension/package.json
@@ -2,7 +2,7 @@
     "name": "nab-al-tools",
     "displayName": "NAB AL Tools",
     "description": "Development and translation management tool for AL language and Microsoft Dynamics 365 Business Central extensions.",
-    "version": "1.1.1-preview.10",
+    "version": "1.1.1-preview.11",
     "publisher": "nabsolutions",
     "repository": {
         "type": "git",
@@ -119,6 +119,10 @@
             {
                 "command": "nab.RefreshXlfFilesFromGXlf",
                 "title": "NAB: Refresh XLF files from g.xlf"
+            },
+            {
+                "command": "nab.FormatCurrentXlfFileForLCS",
+                "title": "NAB: Format current XLF file for LCS"
             },
             {
                 "command": "nab.FindNextUnTranslatedText",
