--- a/extension/package.json
+++ b/extension/package.json
@@ -129,6 +129,10 @@
                 "title": "NAB: Open DTS (Dynamics 365 Translation Service)"
             },
             {
+                "command": "nab.ImportDtsTranslations",
+                "title": "NAB: Import DTS Translations"
+            },
+            {
                 "command": "nab.FindNextUnTranslatedText",
                 "title": "NAB: Find next untranslated text"
             },
@@ -343,6 +347,12 @@
                     "type": "string",
                     "default": "",
                     "description": "Specifies the ID that is shown in the URL when using Dynamics 365 Translation Service. This ID is used when opening DTS from within VSCode.",
+                    "scope": "resource"
+                },
+                "NAB.Set DTS Exact Match To Signed Off": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "When using Dynamics 365 Translation Service and this is enabled, when importing translations from DTS and the source state is \"translated\" and state-qualifier is \"exact-match\" or \"x-microsoft-exact-match\", the target state will automatically be set to \"signed-off\" and the state-qualifier will be cleared.",
                     "scope": "resource"
                 },
                 "NAB.ReplaceSelfClosingXlfTags": {
