Update from Yeoman code-generator

--- a/extension/.vscode/launch.json
+++ b/extension/.vscode/launch.json
@@ -23,7 +23,7 @@
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js"
             ],
-            "preLaunchTask": "npm: watch",
+            "preLaunchTask": "${defaultBuildTask}",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
@@ -34,12 +34,12 @@
             "args": [
                 "${workspaceFolder}/../test-app/TestApp.code-workspace",
                 "--extensionDevelopmentPath=${workspaceFolder}",
-                "--extensionTestsPath=${workspaceFolder}/out/test"
+                "--extensionTestsPath=${workspaceFolder}/out/test/suite/index"
             ],
             "outFiles": [
                 "${workspaceFolder}/out/test/**/*.js"
             ],
-            "preLaunchTask": "npm: watch"
+            "preLaunchTask": "${defaultBuildTask}"
         },
         {
             "name": "Tests any workspace",
@@ -52,7 +52,7 @@
             "outFiles": [
                 "${workspaceFolder}/out/test/**/*.js"
             ],
-            "preLaunchTask": "npm: watch"
+            "preLaunchTask": "${defaultBuildTask}"
         }
     ]
 }
