--- a/extension/.eslintrc.json
+++ b/extension/.eslintrc.json
@@ -14,7 +14,8 @@
         "curly": "warn",
         "eqeqeq": "warn",
         "no-throw-literal": "warn",
-        "semi": "off"
+        "semi": "warn",
+        "no-unused-expressions": "warn"
     },
     "ignorePatterns": [
         "**/*.d.ts"
