--- a/extension/package.json
+++ b/extension/package.json
@@ -496,7 +496,9 @@
         "node-powershell": "^3.3.1",
         "time-stamp": "^1.1.0",
         "xmldom": "^0.5.0",
-        "txml": "^4.0.1"
+        "txml": "^4.0.1",
+        "semver": "^7.3.5",
+        "json-stringify-safe": "5.0.1"
     },
     "devDependencies": {
         "@types/adm-zip": "^0.4.34",
@@ -504,11 +506,13 @@
         "@types/escape-string-regexp": "^1.0.0",
         "@types/format-duration": "^1.0.1",
         "@types/jdataview": "0.0.31",
+        "@types/json-stringify-safe": "^5.0.0",
         "@types/lodash": "^4.14.168",
         "@types/minimatch": "^3.0.3",
         "@types/mocha": "^2.2.42",
         "@types/node": "^8.10.66",
         "@types/node-powershell": "^3.1.1",
+        "@types/semver": "^7.3.5",
         "@types/xmldom": "^0.1.30",
         "@typescript-eslint/eslint-plugin": "^3.0.2",
         "@typescript-eslint/parser": "^3.0.2",
