--- a/extension/.eslintrc.json
+++ b/extension/.eslintrc.json
@@ -19,5 +19,22 @@
     },
     "ignorePatterns": [
         "**/*.d.ts"
+    ],
+    "overrides": [
+        {
+            // enable the rule specifically for TypeScript files
+            "files": [
+                "*.ts",
+                "*.tsx"
+            ],
+            "rules": {
+                "@typescript-eslint/explicit-function-return-type": [
+                    "warn",
+                    {
+                        "allowExpressions": true
+                    }
+                ]
+            }
+        }
     ]
 }
