--- a/extension/package.json
+++ b/extension/package.json
@@ -295,7 +295,7 @@
                 },
                 "NAB.MatchBaseAppTranslation": {
                     "type": "boolean",
-                    "default": false,
+                    "default": true,
                     "description": "If enabled, the \"NAB: Refresh XLF files from g.xlf\" function tries to match sources in the translated xlf file with translations from the BaseApplication. A found match of \"source\" is then prefixed with [NAB: SUGGESTION] for manual review. If several matches are found, all matches are added and you need delete the ones you do not want. Use \"NAB: Find next untranslated text\" (Ctrl+Alt+U) or \"NAB: Find multiple targets in XLF files\" to review all matches. This feature only works if \"UseExternalTranslationTool\" is disabled.",
                     "scope": "resource"
                 },
@@ -423,13 +423,13 @@
                 },
                 "NAB.GenerateTooltipDocsWithExternalDocs": {
                     "type": "boolean",
-                    "default": false,
+                    "default": true,
                     "description": "When creating external documentation, this setting specifies if the ToolTip file should be created as well.",
                     "scope": "resource"
                 },
                 "NAB.GenerateDeprecatedFeaturesPageWithExternalDocs": {
                     "type": "boolean",
-                    "default": false,
+                    "default": true,
                     "description": "When creating external documentation, this setting specifies if a page with public obsoleted objects/procedures/controls should be created.",
                     "scope": "resource"
                 },
@@ -447,7 +447,7 @@
                 },
                 "NAB.CreateTocFilesForDocs": {
                     "type": "boolean",
-                    "default": false,
+                    "default": true,
                     "description": "When creating external documentation, this setting specifies if TOC (table of contents) files should be created.",
                     "scope": "resource"
                 },
@@ -465,7 +465,7 @@
                 },
                 "NAB.CreateUidForDocs": {
                     "type": "boolean",
-                    "default": false,
+                    "default": true,
                     "description": "When creating external documentation, this setting specifies if an UID should be created in a Yaml Header in each generated md file. The UID can then be used for linking in DocFx.",
                     "scope": "resource"
                 },
