WIP madge workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,5 +33,5 @@ jobs:
           run: npm test
           working-directory: ${{env.working-directory}}
       - name: Check Circular Dependencies
-      - run: node node_modules/madge/bin/cli.js --warning --circular --extensions ts ${{env.working-directory}}/src/extension.ts
+        run: node node_modules/madge/bin/cli.js --warning --circular --extensions ts ${{env.working-directory}}/src/extension.ts
 
