--- a/extension/.eslintrc.json
+++ b/extension/.eslintrc.json
@@ -5,6 +5,9 @@
         "ecmaVersion": 2019,
         "sourceType": "module"
     },
+    "extends": [
+        "plugin:@typescript-eslint/recommended"
+    ],
     "plugins": [
         "@typescript-eslint"
     ],
@@ -16,7 +19,8 @@
         "no-unused-expressions": "warn"
     },
     "ignorePatterns": [
-        "**/*.d.ts"
+        "**/*.d.ts",
+        "out"
     ],
     "overrides": [
         {
