--- a/extension/package.json
+++ b/extension/package.json
@@ -591,11 +591,10 @@
     },
     "devDependencies": {
         "@types/adm-zip": "^0.4.34",
-        "@types/vscode": "^1.50.0",
-        "@types/glob": "^7.1.3",
         "@types/capitalize": "^1.0.2",
         "@types/escape-string-regexp": "^1.0.0",
         "@types/format-duration": "^1.0.1",
+        "@types/glob": "^7.1.3",
         "@types/jdataview": "0.0.31",
         "@types/lodash": "^4.14.168",
         "@types/minimatch": "^3.0.3",
@@ -603,12 +602,16 @@
         "@types/node": "^12.11.7",
         "@types/node-powershell": "^3.1.1",
         "@types/semver": "^7.3.5",
+        "@types/vscode": "^1.50.0",
         "@types/xmldom": "^0.1.30",
         "@typescript-eslint/eslint-plugin": "^4.14.1",
         "@typescript-eslint/parser": "^4.14.1",
-        "glob": "^7.1.6",
         "eslint": "^7.20.0",
+        "eslint-config-prettier": "8.3.0",
+        "eslint-plugin-prettier": "3.4.0",
+        "glob": "^7.1.6",
         "mocha": "^8.2.1",
+        "prettier": "2.2.1",
         "typescript": "^4.1.5",
         "vscode-test": "^1.5.0"
     }
