--- a/extension/.eslintrc.json
+++ b/extension/.eslintrc.json
@@ -6,10 +6,13 @@
         "sourceType": "module"
     },
     "extends": [
-        "plugin:@typescript-eslint/recommended"
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:prettier/recommended"
     ],
     "plugins": [
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "prettier"
     ],
     "rules": {
         "@typescript-eslint/naming-convention": "warn",
@@ -30,6 +33,7 @@
                 "*.tsx"
             ],
             "rules": {
+                "prettier/prettier": "warn",
                 "@typescript-eslint/explicit-function-return-type": [
                     "warn",
                     {
@@ -45,7 +49,9 @@
                 "*.js"
             ],
             "rules": {
-                "semi": "warn"
+                "semi": "warn",
+                "prettier/prettier": "off",
+                "no-undef": "off"
             }
         }
     ]
