--- a/extension/package.json
+++ b/extension/package.json
@@ -610,6 +610,7 @@
         "eslint-config-prettier": "8.3.0",
         "eslint-plugin-prettier": "3.4.0",
         "glob": "^7.1.6",
+        "madge": "^4.0.2",
         "mocha": "^8.2.1",
         "prettier": "2.2.1",
         "typescript": "^4.1.5",
