--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest]
         node-version: [12.x, 14.x]
     runs-on: ${{ matrix.os }}
     env:
@@ -32,3 +32,5 @@ jobs:
         with:
           run: npm test
           working-directory: ${{env.working-directory}}
+      - name: Check Circular Dependencies
+        run: node ${{env.working-directory}}node_modules/madge/bin/cli.js --warning --circular --extensions ts ${{env.working-directory}}src/extension.ts
