--- a/extension/.vscode/tasks.json
+++ b/extension/.vscode/tasks.json
@@ -57,6 +57,39 @@
                 "clear": false
             },
             "problemMatcher": []
+        },
+        {
+            "label": "Check Circular Dependencies",
+            "type": "shell",
+            "windows":{
+                "command": "node",
+                "args":[
+                    "${workspaceFolder}\\node_modules\\madge\\bin\\cli.js",
+                    "--warning",
+                    "--circular",
+                    "--extensions=ts",
+                    ".\\src\\extension.ts"
+                ],
+            },
+            "linux":{
+                "command": "node",
+                "args":[
+                    "${workspaceFolder}/node_modules/madge/bin/cli.js",
+                    "--warning",
+                    "--circular",
+                    "--extensions=ts",
+                    "./src/extension.ts"
+                ],
+            },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": true,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            },
+            "problemMatcher": []
         }
     ]
 }
