--- a/extension/.vscode/tasks.json
+++ b/extension/.vscode/tasks.json
@@ -6,7 +6,10 @@
         {
             "type": "npm",
             "script": "watch",
-            "problemMatcher": "$tsc-watch",
+            "problemMatcher": [
+                "$ts-webpack-watch",
+                "$tslint-webpack-watch"
+            ],
             "isBackground": true,
             "presentation": {
                 "reveal": "never"
@@ -15,6 +18,16 @@
                 "kind": "build",
                 "isDefault": true
             }
+        },
+        {
+            "type": "npm",
+            "script": "test-watch",
+            "problemMatcher": "$tsc-watch",
+            "isBackground": true,
+            "presentation": {
+                "reveal": "never"
+            },
+            "group": "build"
         },
         {
             "label": "Package Preview",
@@ -51,6 +64,7 @@
             "presentation": {
                 "echo": true,
                 "reveal": "always",
+
                 "focus": true,
                 "panel": "shared",
                 "showReuseMessage": true,
