--- a/extension/package.json
+++ b/extension/package.json
@@ -49,7 +49,7 @@
         "workspaceContains:app.json",
         "onCommand:al.go"
     ],
-    "main": "./out/extension",
+    "main": "./dist/extension.js",
     "files": [
         "./frontend/**"
     ],
@@ -564,10 +564,13 @@
     },
     "extensionDependencies": [],
     "scripts": {
-        "vscode:prepublish": "npm run compile",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
-        "pretest": "npm run compile && npm run lint",
+        "vscode:prepublish": "npm run package",
+        "compile": "webpack",
+        "watch": "webpack --watch",
+        "package": "webpack --mode production --devtool hidden-source-map",
+        "test-compile": "tsc -p ./",
+        "test-watch": "tsc -watch -p ./",
+        "pretest": "npm run test-compile && npm run lint",
         "lint": "eslint src --ext .js,.ts",
         "lint:fix": "eslint src --fix --ext .js,.ts .",
         "test": "node ./out/test/runTest.js"
@@ -613,7 +616,10 @@
         "madge": "^4.0.2",
         "mocha": "^8.2.1",
         "prettier": "2.2.1",
+        "ts-loader": "^9.1.2",
         "typescript": "^4.1.5",
-        "vscode-test": "^1.5.0"
+        "vscode-test": "^1.5.0",
+        "webpack": "^5.36.2",
+        "webpack-cli": "^4.7.0"
     }
 }
