--- a/extension/package.json
+++ b/extension/package.json
@@ -588,6 +588,7 @@
         "lodash": "^4.17.21",
         "minimatch": "^3.0.4",
         "node-powershell": "^3.3.1",
+        "original-fs": "^1.1.0",
         "semver": "^7.3.5",
         "time-stamp": "^1.1.0",
         "txml": "^4.0.1",
