--- a/extension/.eslintrc.json
+++ b/extension/.eslintrc.json
@@ -54,6 +54,7 @@
                 "*.js"
             ],
             "rules": {
+                "@typescript-eslint/no-var-requires": "off",
                 "semi": "warn",
                 "prettier/prettier": "off",
                 "no-undef": "off"
