ignore dist & images

--- a/extension/.eslintrc.json
+++ b/extension/.eslintrc.json
@@ -23,7 +23,8 @@
     },
     "ignorePatterns": [
         "**/*.d.ts",
-        "out"
+        "out",
+        "dist"
     ],
     "overrides": [
         {
