--- a/extension/package.json
+++ b/extension/package.json
@@ -582,6 +582,7 @@
         "axios": "^0.21.1",
         "compare-versions": "^3.6.0",
         "escape-string-regexp": "^1.0.5",
+        "find": "0.3.0",
         "format-duration": "^1.3.1",
         "javascript": "^1.0.0",
         "jdataview": "^2.5.0",
@@ -597,6 +598,7 @@
     "devDependencies": {
         "@types/adm-zip": "^0.4.34",
         "@types/escape-string-regexp": "^1.0.0",
+        "@types/find": "^0.2.1",
         "@types/format-duration": "^1.0.1",
         "@types/glob": "^7.1.3",
         "@types/jdataview": "0.0.31",
