--- a/extension/.vscode/launch.json
+++ b/extension/.vscode/launch.json
@@ -52,7 +52,7 @@
             "outFiles": [
                 "${workspaceFolder}/out/test/**/*.js"
             ],
-            "preLaunchTask": "npm: test-watch"
+            "preLaunchTask": "${defaultBuildTask}",
         }
     ]
 }
