--- a/extension/.vscode/launch.json
+++ b/extension/.vscode/launch.json
@@ -23,7 +23,7 @@
             "outFiles": [
                 "${workspaceFolder}/dist/**/*.js"
             ],
-            "preLaunchTask": "${defaultBuildTask}",
+            "preLaunchTask": "npm: webpack-dev",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
@@ -39,7 +39,7 @@
             "outFiles": [
                 "${workspaceFolder}/out/test/**/*.js"
             ],
-            "preLaunchTask": "npm: test-compile",
+            "preLaunchTask": "npm: test-watch",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
@@ -51,9 +51,9 @@
                 "--extensionDevelopmentPath=${workspaceFolder}"
             ],
             "outFiles": [
-                "${workspaceFolder}/out/test/**/*.js"
+                "${workspaceFolder}/dist/**/*.js"
             ],
-            "preLaunchTask": "${defaultBuildTask}",
+            "preLaunchTask": "npm: webpack-dev",
             "internalConsoleOptions": "openOnSessionStart"
         }
     ]
