--- a/extension/package.json
+++ b/extension/package.json
@@ -577,6 +577,27 @@
         "lint:fix": "eslint src --fix --ext .js,.ts .",
         "test": "node ./out/test/runTest.js"
     },
+    "nyc": {
+        "extends": "@istanbuljs/nyc-config-typescript",
+        "require": [
+            "ts-node/register",
+            "source-map-support/register"
+        ],
+        "include": [
+            "src/**/*.ts",
+            "out/**/*.js"
+        ],
+        "exclude": [
+            "src/test/*"
+        ],
+        "reporter": [
+            "text-summary",
+            "html",
+            "lcov"
+        ],
+        "check-coverage": true,
+        "report-dir": ".coverage"
+    },
     "dependencies": {
         "adm-zip": "^0.5.5",
         "axios": "^0.21.1",
@@ -595,6 +616,7 @@
         "xmldom": "^0.5.0"
     },
     "devDependencies": {
+        "@istanbuljs/nyc-config-typescript": "^1.0.1",
         "@types/adm-zip": "^0.4.34",
         "@types/escape-string-regexp": "^1.0.0",
         "@types/format-duration": "^1.0.1",
@@ -616,8 +638,10 @@
         "glob": "^7.1.7",
         "madge": "^4.0.2",
         "mocha": "^8.4.0",
+        "nyc": "^15.1.0",
         "prettier": "2.2.1",
         "ts-loader": "^9.1.2",
+        "ts-node": "^9.1.1",
         "typescript": "^4.2.4",
         "vscode-test": "^1.5.0",
         "webpack": "^5.36.2",
