add useDictionaryInCsvImport setting

--- a/extension/package.json
+++ b/extension/package.json
@@ -391,6 +391,12 @@
                         "Sets the Target State to 'needs-review-l10n'"
                     ]
                 },
+                "NAB.useDictionaryInCsvImport": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Toggles usage of substitution dictionary when importing CSV files.",
+                    "scope": "resource"
+                },
                 "NAB.ReplaceSelfClosingXlfTags": {
                     "type": "boolean",
                     "default": true,
