--- a/extension/package.json
+++ b/extension/package.json
@@ -61,7 +61,7 @@
                     "when": "editorLangId == al"
                 },
                 {
-                    "command": "nab.FindSourceOfTranslatedTexts",
+                    "command": "nab.FindSourceOfCurrentTranslationUnit",
                     "when": "editorLangId == xml && resourceExtname == .xlf"
                 }
             ],
@@ -72,7 +72,7 @@
                     "when": "editorLangId == al && editorTextFocus"
                 },
                 {
-                    "command": "nab.FindSourceOfTranslatedTexts",
+                    "command": "nab.FindSourceOfCurrentTranslationUnit",
                     "group": "navigation",
                     "when": "editorLangId == xml && resourceExtname == .xlf"
                 },
@@ -182,8 +182,8 @@
                 "title": "NAB: Copy <source> to <target>"
             },
             {
-                "command": "nab.FindSourceOfTranslatedTexts",
-                "title": "NAB: Find code source of current line",
+                "command": "nab.FindSourceOfCurrentTranslationUnit",
+                "title": "NAB: Find source of current Translation Unit",
                 "category": "navigation"
             },
             {
@@ -253,7 +253,7 @@
         ],
         "keybindings": [
             {
-                "command": "nab.FindSourceOfTranslatedTexts",
+                "command": "nab.FindSourceOfCurrentTranslationUnit",
                 "key": "F12",
                 "when": "editorLangId == xml && resourceExtname == .xlf"
             },
